[package]
name = "aa-devtool-copilot"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DevToolAdapter for GitHub Copilot — VS Code settings alignment and MCP governance (AAASM-203)"
publish = false

[dependencies]
aa-devtool-contract = { path = "../aa-devtool-contract" }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
