[package]
name = "aa-devtool-saas"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SaaS coding-agent observability adapter (L0–L1) for Agent Assembly dev tool governance"
publish = false

[dependencies]
aa-core     = { path = "../aa-core", features = ["std", "serde"] }
async-trait = "0.1"
hex         = "0.4"
hmac        = "0.13"
http        = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
sha2        = "0.11"
thiserror   = "2"

[dev-dependencies]
axum  = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["macros", "rt"] }
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
