[package]
name = "aa-devtool-saas"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SaaS coding-agent observability adapter (L0–L1) for Agent Assembly dev tool governance"
publish = false

[dependencies]
aa-devtool-contract = { path = "../aa-devtool-contract" }
async-trait = { workspace = true }
hex         = { workspace = true }
hmac        = { workspace = true }
http        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sha2        = { workspace = true }
thiserror   = { workspace = true }

[dev-dependencies]
axum  = { workspace = true, features = ["ws"] }
tokio = { workspace = true, features = ["macros", "rt"] }
tower = { workspace = true }

[lints]
workspace = true
