[package]
name = "aa-devtool-windsurf"
version.workspace = true
publish = false  # AAASM-2340: dev-tool subsystem held back from this alpha — user directive
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DevToolAdapter for Windsurf Cascade — admin settings sync, MCP registry control, terminal allow/deny"

[dependencies]
aa-core      = { path = "../aa-core", version = "0.0.1-alpha.3", features = ["std", "serde"] }
async-trait  = "0.1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

[dev-dependencies]
tempfile = "3"
tokio    = { version = "1", features = ["macros", "rt"] }

[lints]
workspace = true
