[package]
name = "aa-devtool-windsurf"
version.workspace = true
publish = false  # AAASM-2340: dev-tool subsystem held back from this alpha — user directive
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DevToolAdapter for Windsurf Cascade — admin settings sync, MCP registry control, terminal allow/deny"

[dependencies]
aa-core      = { path = "../aa-core", version = "0.0.1-alpha.9", features = ["std", "serde"] }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
