[package]
name = "aa-devtool"
version.workspace = true
publish = false  # AAASM-2340: dev-tool subsystem held back from this alpha — user directive
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Dev tool auto-discovery for Agent Assembly"

[dependencies]
aa-core = { path = "../aa-core", version = "0.0.1-alpha.7", features = ["std", "serde"] }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
dirs = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
