[package]
name = "aa-ebpf-probes"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
aya-ebpf     = "0.1"
aya-log-ebpf = "0.1"
aa-ebpf-common = { path = "../aa-ebpf-common" }

# BPF programs are no_std binaries; there is no std or test harness.
[[bin]]
name = "aa-file-io"
path = "src/main.rs"

[[bin]]
name = "aa-tls-probes"
path = "src/ssl_probes.rs"

[[bin]]
name = "aa-exec-probes"
path = "src/exec_probes.rs"

[[bin]]
name = "aa-syscall-guard"
path = "src/syscall_guard.rs"

# Declare this crate as its own standalone workspace so Cargo does not
# attempt to include it in the parent agent-assembly workspace.
[workspace]
