[package]
name = "aa-ebpf"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "eBPF-based kernel-level monitoring hooks for Agent Assembly"

# AAASM-2340: explicit include list lets `_embedded/aa-ebpf-probes/` (a
# build-time mirror of the sibling `../aa-ebpf-probes/` standalone BPF
# workspace) ship in the published tarball even though it's gitignored.
# Without this, `cargo install aasm` would always degrade to BPF stubs
# even on machines that have nightly + bpfel-unknown-none installed.
include = [
    "src/**",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "_embedded/aa-ebpf-probes/Cargo.toml.embedded",
    "_embedded/aa-ebpf-probes/rust-toolchain.toml",
    "_embedded/aa-ebpf-probes/.cargo/**",
    "_embedded/aa-ebpf-probes/src/**",
]

[features]
default = []
# Enables integration tests that load BPF programs into a live kernel.
# Requires root (CAP_BPF + CAP_PERFMON). Only meaningful on Linux.
# Usage: cargo test -p aa-ebpf --features integration-test --test load_hello
integration-test = []

[dependencies]
aa-core        = { path = "../aa-core", version = "0.0.1-beta.2" }
aa-ebpf-common = { path = "../aa-ebpf-common", version = "0.0.1-beta.2", features = ["std"] }
anyhow         = { workspace = true }
bytes          = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true, features = ["full"] }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# aya is Linux-only: it uses libc symbols (CLOCK_BOOTTIME, etc.) absent on macOS/Windows.
# The build-dep (aya-build) is unconditional so build.rs always compiles; the actual
# BPF compilation call inside build.rs is gated with #[cfg(target_os = "linux")].
[target.'cfg(target_os = "linux")'.dependencies]
aya     = { workspace = true }
aya-log = "0.2"

[lints]
workspace = true
