[package]
name = "aa-ffi-go"
version.workspace = true
publish = false  # AAASM-2340: not a transitive dep of aa-cli
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Go C-ABI static library bindings for Agent Assembly"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
serde_json = "1"

[lints]
workspace = true
