[package]
name = "aa-ffi-node"
version.workspace = true
publish = false  # AAASM-2340: not a transitive dep of aa-cli
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Node.js FFI bindings for Agent Assembly via napi-rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
aa-core = { path = "../aa-core" }
napi = { version = "3", features = ["napi4"] }
napi-derive = "3"

[build-dependencies]
napi-build = "2"

[lints]
workspace = true
