[package]
name = "aa-ffi-python"
version.workspace = true
publish = false  # AAASM-2340: not a transitive dep of aa-cli
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python FFI bindings for Agent Assembly via PyO3"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
aa-core = { path = "../aa-core" }
aa-proto = { path = "../aa-proto" }
prost = { workspace = true }
pyo3 = "0.28"
tokio = { workspace = true, features = ["net", "rt", "sync", "time", "io-util", "macros"] }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
pyo3 = { version = "0.28", features = ["auto-initialize"] }
tokio = { workspace = true, features = ["test-util", "rt", "sync"] }

[[bench]]
name    = "sdk_bench"
harness = false

[features]
extension-module = ["pyo3/extension-module"]

[lints]
workspace = true
