[package]
name = "aa-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Control plane — policy enforcement engine and agent registry for Agent Assembly"

[dependencies]
aa-core      = { path = "../aa-core", version = "0.0.1-alpha.5", features = ["serde"] }
aa-proto     = { path = "../aa-proto", version = "0.0.1-alpha.5" }
aa-runtime   = { path = "../aa-runtime", version = "0.0.1-alpha.5" }
tokio        = { version = "1", features = ["full"] }
regex        = "1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
serde_yaml   = "0.9"
arc-swap     = "1"
dashmap      = "6"
ed25519-dalek = { version = "2", features = ["std"] }
hex          = "0.4"
notify       = { version = "8", features = [] }
chrono       = { version = "0.4", features = ["clock", "serde"] }
chrono-tz    = { version = "0.10", features = ["serde"] }
cron         = "0.16"
rust_decimal = { version = "1", features = ["serde-str"] }
thiserror    = "2"
dirs         = "6"
async-stream = "0.3"
async-trait  = "0.1"
sha2         = "0.11"
similar      = "3"
tokio-stream = "0.1"
tonic        = { version = "0.14", features = ["transport"] }
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest      = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
uuid         = { version = "1", features = ["v4", "v5", "v7", "serde"] }
clap         = { version = "4", features = ["derive"] }
moka         = { version = "0.12", features = ["sync"] }
strsim       = "0.11"
humantime    = "2"
ahash        = "0.8"
metrics      = "0.24"
sqlx         = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "macros", "migrate", "uuid", "chrono", "json"] }
tokio-util   = "0.7"
parking_lot  = "0.12"
utoipa       = { version = "5", features = ["axum_extras"] }
axum         = "0.8"
axum-server  = { version = "0.8", features = ["tls-rustls"] }
tower-http   = { version = "0.6", features = ["fs"] }
x509-parser  = "0.18"
redis        = { version = "1.2", default-features = false, features = ["tokio-comp", "connection-manager"], optional = true }
# strip-for-publish:begin audit-consumer
# AAASM-2388: gateway-side NATS JetStream audit consumer. Held back from the
# crates.io publish set — aa-storage-postgres is `publish = false`, so cargo
# would reject the published gateway for depending on it. This whole block is
# removed by .ci/strip-for-publish.sh before `cargo workspaces publish`.
async-nats   = { version = "0.49", optional = true }
aa-storage-postgres = { path = "../aa-storage-postgres", optional = true }
# strip-for-publish:end audit-consumer

[dev-dependencies]
# Path-only (the driver is publish=false). The migration-drift test runs the
# driver's own embedded MIGRATOR so the gateway can never drift from the
# canonical MVP schema (AAASM-2389).
aa-storage-postgres = { path = "../aa-storage-postgres" }
criterion    = { version = "0.8", features = ["async_tokio"] }
proptest     = "1"
tempfile     = "3"
tokio        = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
tokio-stream = "0.1"
insta        = "1"
tower        = { version = "0.5", features = ["util"] }
rcgen        = { version = "0.14", features = ["pem"] }
time         = "0.3"
testcontainers-modules = { version = "0.15", features = ["postgres", "nats"] }
rustls       = "0.23"

[features]
default = []
# Pulls the `redis` crate in and gates the Redis-backed `PolicyCache` variant.
# Off by default — the gateway runs with `PolicyCache::Disabled` unless a
# downstream binary explicitly enables this feature.
redis-cache = ["dep:redis"]
# strip-for-publish:begin audit-consumer
# AAASM-2388: gateway-internal NATS->Postgres audit consumer worker. Default
# OFF; enabled in dev/CI via `--all-features`. Stripped before crates.io publish.
audit-consumer = ["dep:async-nats", "dep:aa-storage-postgres"]
# strip-for-publish:end audit-consumer

[[bin]]
name = "aa-gateway"
path = "src/main.rs"

[[bench]]
name    = "policy_check"
harness = false

[[bench]]
name    = "policy_cascade"
harness = false

[lints]
workspace = true
