[package]
name = "aa-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "End-to-end integration tests for AAASM (topology HTTP roundtrip + CLI subcommand coverage). Test-only crate."

[features]
default = []
# Opt-in feature for Linux-only end-to-end tests that load eBPF probes into a
# live kernel (AAASM-1520 / F116 ST-H). Requires root (CAP_BPF + CAP_PERFMON)
# and a kernel >= 5.10 with BTF enabled.
#
# Usage: sudo cargo nextest run -p aa-integration-tests --features integration-test --test e2e_ebpf
integration-test = []

[dev-dependencies]
aa-api      = { path = "../aa-api" }
aa-core     = { path = "../aa-core" }
aa-devtool  = { path = "../aa-devtool" }
aa-gateway  = { path = "../aa-gateway" }
aa-proxy    = { path = "../aa-proxy" }
aa-runtime  = { path = "../aa-runtime" }

anyhow      = "1"
assert_cmd  = "2"
async-trait = "0.1"
axum        = { version = "0.8", features = ["ws"] }
chrono      = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz   = "0.10"
jsonschema  = "0.46"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
base64       = "0.22"
bytes        = "1"
libc        = "0.2"
moka        = { version = "0.12", features = ["future"] }
portpicker  = "0.1"
reqwest     = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rustls      = { version = "0.23", features = ["ring"] }
rstest      = "0.26"
rust_decimal = "1"
serde_json  = "1"
serde_yaml  = "0.9"
tempfile    = "3"
tokio             = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29"
uuid              = { version = "1", features = ["v4"] }
futures           = "0.3"

# Linux-only dev-deps for the AAASM-1520 / F116 ST-H eBPF E2E suite (also
# used by AAASM-1522 / F116 ST-J file-monitoring E2E suite). Gated on
# target so macOS `cargo build` / `cargo nextest` skip them cleanly — the
# `e2e_ebpf` / `e2e_file_monitoring` test files are themselves
# `#[cfg(all(target_os = "linux", feature = "integration-test"))]`, but
# the per-target dep gate keeps Cargo from trying to resolve `aa-ebpf` /
# `aya` / `bytes` on non-Linux hosts where `aya` won't compile.
[target.'cfg(target_os = "linux")'.dev-dependencies]
aa-ebpf        = { path = "../aa-ebpf" }
aa-ebpf-common = { path = "../aa-ebpf-common", features = ["std"] }
aya            = { version = "0.13", features = ["async_tokio"] }
# `bytes` is the buffer type aya's AsyncPerfEventArray::read_events fills.
# Only needed by the file-IO perf-array reader in e2e_file_monitoring.rs.
bytes          = "1"
