[package]
name = "aa-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "End-to-end integration tests for AAASM (topology HTTP roundtrip + CLI subcommand coverage). Test-only crate."

[features]
default = []
# Opt-in feature for Linux-only end-to-end tests that load eBPF probes into a
# live kernel (AAASM-1520 / F116 ST-H). Requires root (CAP_BPF + CAP_PERFMON)
# and a kernel >= 5.10 with BTF enabled.
#
# Usage: sudo cargo nextest run -p aa-integration-tests --features integration-test --test e2e_ebpf
integration-test = []

# AAASM-2394: throughput / dedupe / channel-depth verification of the gateway
# NATS audit consumer. Forwards to aa-gateway's audit-consumer feature and gates
# `tests/audit_consumer_verify.rs` (Docker-backed: NATS JetStream + Postgres).
#
# Usage: cargo nextest run -p aa-integration-tests --features audit-consumer --test audit_consumer_verify
audit-consumer = ["aa-gateway/audit-consumer"]

[dev-dependencies]
aa-api      = { path = "../aa-api" }
aa-core     = { path = "../aa-core" }
aa-security = { path = "../aa-security", features = ["serde"] }
aa-devtool  = { path = "../aa-devtool" }
aa-gateway  = { path = "../aa-gateway" }
aa-storage-postgres = { path = "../aa-storage-postgres" }
aa-proto    = { path = "../aa-proto" }
aa-proxy    = { path = "../aa-proxy" }
aa-runtime  = { path = "../aa-runtime" }
aa-sandbox  = { path = "../aa-sandbox" }

# AAASM-2394 audit-consumer verification (Docker-backed) test deps.
async-nats  = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
sqlx        = { workspace = true, default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros"] }
testcontainers-modules = { workspace = true, features = ["postgres", "nats"] }

anyhow      = { workspace = true }
assert_cmd  = { workspace = true }
async-trait = { workspace = true }
axum        = { workspace = true, features = ["ws"] }
chrono      = { workspace = true, default-features = false, features = ["clock"] }
chrono-tz   = { workspace = true }
jsonschema  = "0.46"
jsonwebtoken = { workspace = true }
base64       = "0.22"
bytes        = { workspace = true }
libc        = { workspace = true }
moka        = { workspace = true, features = ["future"] }
portpicker  = "0.1"
reqwest     = { workspace = true, features = ["json", "rustls-tls"] }
rustls      = { workspace = true, features = ["ring"] }
tokio-rustls = { workspace = true }
rstest      = { workspace = true }
rust_decimal = { workspace = true }
serde_json  = { workspace = true }
serde_yaml  = { workspace = true }
tempfile    = { workspace = true }
tokio             = { workspace = true, features = ["full"] }
tokio-stream      = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-util        = { workspace = true }
tonic             = { workspace = true }
uuid              = { workspace = true, features = ["v4"] }
futures           = { workspace = true }
wat               = { workspace = true }

# Linux-only dev-deps for the AAASM-1520 / F116 ST-H eBPF E2E suite (also
# used by AAASM-1522 / F116 ST-J file-monitoring E2E suite). Gated on
# target so macOS `cargo build` / `cargo nextest` skip them cleanly — the
# `e2e_ebpf` / `e2e_file_monitoring` test files are themselves
# `#[cfg(all(target_os = "linux", feature = "integration-test"))]`, but
# the per-target dep gate keeps Cargo from trying to resolve `aa-ebpf` /
# `aya` / `bytes` on non-Linux hosts where `aya` won't compile.
[target.'cfg(target_os = "linux")'.dev-dependencies]
aa-ebpf        = { path = "../aa-ebpf" }
aa-ebpf-common = { path = "../aa-ebpf-common", features = ["std"] }
aya            = { workspace = true }
# `bytes` is the buffer type aya's AsyncPerfEventArray::read_events fills.
# Only needed by the file-IO perf-array reader in e2e_file_monitoring.rs.
bytes          = { workspace = true }
