[package]
name = "aa-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Sidecar traffic interception proxy for Agent Assembly"

[lib]
name = "aa_proxy"

[[bin]]
name = "aa-proxy"
path = "src/main.rs"

[dependencies]
aa-core = { path = "../aa-core" }
aa-proto   = { path = "../aa-proto" }
aa-runtime = { path = "../aa-runtime" }
tokio      = { version = "1", features = ["full"] }
hyper      = { version = "1", features = ["server", "http1"] }
hyper-util   = { version = "0.1", features = ["tokio", "server"] }
rustls       = { version = "0.23", features = ["ring"] }
tokio-rustls       = "0.26"
rustls-native-certs = "0.8"
rcgen        = { version = "0.13", features = ["x509-parser"] }
time         = "0.3"
lru          = "0.18"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
anyhow       = "1"
thiserror    = "2"
dirs                = "6"
bytes               = "1"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true

[dev-dependencies]
bytes = "1"
criterion = { version = "0.8", features = ["async_tokio", "html_reports"] }
tempfile = "3"
tokio = { version = "1", features = ["rt", "sync", "macros"] }

[[bench]]
name    = "intercept_bench"
harness = false
